<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?attr/colorOnPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Overdraw">

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:animateNavigationIcon="true"
        app:layout_anchor="@id/searchBar"
        android:contentDescription="@string/searchviewdescription">
    </com.google.android.material.search.SearchView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_content"
        android:visibility="invisible"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/colorOnPrimary"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_person_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_person_list"/>

            <ProgressBar
                android:id="@+id/pb_search_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:indeterminateTint="@color/blue"
                app:layout_constraintEnd_toEndOf="@+id/rv_person_list"
                app:layout_constraintStart_toStartOf="@+id/rv_person_list"
                app:layout_constraintTop_toTopOf="@id/rv_person_list" />
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        app:liftOnScrollColor="@android:color/transparent"
        android:layout_height="75dp"
        android:background="?attr/colorOnPrimary"
        android:layout_width="match_parent">

        <com.google.android.material.search.SearchBar
            android:background="?attr/colorOnPrimary"
            android:hint="@string/searchbar_hint"
            android:backgroundTint="?attr/colorSurfaceContainerHigh"
            app:navigationIconTint="@color/grey"
            android:id="@+id/searchBar"
            app:layout_scrollFlags="noScroll"
            android:layout_height="48dp"
            android:layout_width="match_parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/inc_layout_search_person"
        layout="@layout/search_person"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_height="match_parent"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>