<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon_cheked"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_person_icon_cheked"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user_icon_cheked"
        android:title="@string/title_profile"/>

</menu>