<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favourite_menu"
        android:title="@string/favourite_menu"
        app:showAsAction="ifRoom"
        android:icon="@drawable/favourite_icon"/>
    <item
        android:id="@+id/share_menu"
        android:title="@string/share_menu"
        app:showAsAction="ifRoom"
        android:icon="@drawable/share_icon"/>
    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings_menu"
        app:showAsAction="always"
        android:icon="@drawable/settings_icon"/>
</menu>