<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.settings.SettingsActivity"
    tools:ignore="Overdraw">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:background="?attr/colorOnPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleCentered="true"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/back_icon"
            app:title="@string/favourite_menu"
            app:titleTextColor="?attr/colorControlNormal"
            app:titleMarginTop="18dp"
            app:titleTextAppearance="@style/toolbar_text_following_followers" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/rv_favourite"
        android:layout_width="match_parent"
        tools:listitem="@layout/item_favourite"
        android:layout_height="match_parent"/>

</LinearLayout>